--- a/assets/style.css
+++ b/assets/style.css
@@ -56,7 +56,7 @@ height: 100%;
     margin-top: 30px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    z-index: -99;
+
 }
 
 .person-div {
@@ -156,6 +156,19 @@ height: 100%;
         transform: scale(1);
     }
     to{
-        transform: scale(1.1);
+        transform: scale(1.1); 
     }
+}
+
+
+/* screen adaptation */
+
+@media screen and (max-width: 950px) {
+    #left-main, #right-main, #middle-main{
+        float: none;
+        height: 300px;
+        text-align: center;
+        width: auto;
+        
+     }
 }
