--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 /* fonts */
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&family=Poppins:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=League+Gothic&family=Oswald&display=swap');
 
 *{
     border: 0;
@@ -8,7 +8,7 @@
 }
 
 /* body */
-body {font-family: poppins;}
+body {font-family: lato;}
 
 #overlay {
     background: #000;
@@ -26,10 +26,18 @@ header {
 
 #logo-upper-left{
     float: left;  
-    background-color: blueviolet;
+    background-color: rgb(84, 69, 99);
     width: 20%;
     line-height: 100px;
-   text-align: center;
+   text-align: left;
+   font-size: 300%;
+   color:rgb(209, 209, 209);
+   font-weight: bolder;
+   letter-spacing: 5px;
+   font-family: league gothic;
+   padding-left: 40px;
+   text-decoration: none;
+   text-shadow: 10px 10px 40px rgb(180, 180, 180);
 }
 
 nav {
