--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,197 +1,409 @@
-/* fonts */
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=League+Gothic&family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
-*{
-    border: 0;
+/*--------------------------------------------Colors*/
+
+.bg-color-name-title {
+    background-color: #676767;
+}
+
+.bg-color-three-reasons {
+    background-color: #ffffff;
+}
+
+.bg-color-personal-info {
+    background-color: #f4f4f4;
+}
+
+.bg-color-skills {
+    background-color: #ffffff;
+}
+
+.bg-color-work-history {
+    background-color: #9b59b6;
+}
+
+.bg-color-contact {
+    background-color: #ffffff;
+}
+
+.bg-color-conferences {
+    background-color: #f4f4f4;
+}
+
+.bg-color-groups {
+    background-color: #ffffff;
+}
+
+.ui-menu-color-home {
+    background-color: #e67e22;
+}
+
+.ui-menu-color-resume {
+    background-color: #9b59b6;
+}
+
+.ui-menu-color-contact {
+    background-color: #3498db;
+}
+
+.ui-menu-color-download {
+    background-color: #d9a81d;
+}
+
+
+.ui-menu-color-github {
+    background-color: #1c4a6c;
+}
+
+.ui-menu-color-interests {
+    background-color: #e74c3c;
+}
+
+
+
+
+body {
+    font-family: Roboto, sans-serif;
+    font-weight: 300;
+    background-color: #525252;
+    color: #555555;
+}
+
+
+/*--------------------------------------------Special Paddings/Margins/Text*/
+
+h1,
+h2,
+h3,
+h4 {
     margin: 0;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.general-sub {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    color: #fafafa;
+}
+
+.inline-block {
+    display: inline-block;
+}
+
+
+.row-table {
+    display: table;
+}
+
+.history-heading,
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
+
+
+/*--------------------------------------------Heading*/
+
+header {
+    margin: 0;
+}
+
+.heading {
+    margin-left: 50px;
+}
+
+.logo {
+    background: url("../images/rosie.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 360px;
+    transition: all .5s ease-in-out;
+    -moz-transition: all .5s ease-in-out;
+    -webkit-transition: all .5s ease-in-out;
+}
+
+.name {
+    font-family: "Exo", sans-serif;
+    font-weight: 100;
+    font-size: 46px;
+    margin-top: 50px;
+    color: #ffffff;
+}
+
+.title {
+    font-family: "Roboto", sans-serif;
+    font-weight: 200;
+    font-size: 28px;
+    margin-top: 20px;
+    margin-bottom: 90px;
+    color: #ffffff;
+}
+
+#nav {
+    margin: 0;
+}
+
+#nav li {
     padding: 0;
 }
 
-/* body */
-body {font-family: lato;}
-
-
-/* header styling */
-
-header {
-    background-color: aquamarine;
-    height: 100px;
-}
-
-#logo-upper-left{
-    float: left;  
-    background-color: rgb(29, 29, 29);
-    width: 20%;
-    line-height: 100px;
-   text-align: center;
-   font-size: 300%;
-   color:rgb(209, 209, 209);
-   font-weight: bolder;
-   letter-spacing: 5px;
-   font-family: league gothic;
-   
-   text-decoration: none;
-   text-shadow: 10px 10px 40px rgb(180, 180, 180);
-}
-
-nav {
-float: right;
-background-color: rgb(151, 82, 151);
-width: 80%;
-height: 100%;
-}
-
-#nav-list {
-    float: right;
-}
-
-.list-item{
-    line-height: 100px;
-    display: inline;
-    padding: 30px;
-    letter-spacing: 5px;
-}
-
-/* persons */
-
-.persons-container{
-    margin-top: 30px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-
-}
-
-.person-div {
-    background-color: rgb(255, 255, 255);
+.menuitem {
+    height: 120px;
     text-align: center;
+    padding: 0;
 }
 
-/* picture and animation section */
-
-#middle-section {
-    margin-top: 30px;
-    height: 800px;
+.menuitem a {
     width: 100%;
-    overflow: hidden;
+    text-decoration: none;
+    color: #ffffff;
+    height: 120px;
 }
 
-#left-main{
-    background: url("../images/dublin-city.webp");
-    background-size: cover;
-    height: 800px;
-    width: 20%;
-    float: left;
-    overflow: hidden;
-    animation-name: slide-continuous;
-    animation-duration: 10s;
-    animation-fill-mode:forwards;
-   
+
+.menuitem a i {
+    padding-top: 22px;
+    display: block;
+    color: #fafafa;
+    font-size: 26px;
 }
 
-#right-main {
-    background-color: rgb(143, 255, 218);
-    height: 800px;
-    width: 20%;
-    float: right;
-    overflow: hidden;
-    
-} 
-
-#middle-main{
-    width: 60%;
-    height: 800px;
-    float: left;
-    transform: scale(0.9);
-    background: url("../images/main-picture.png") no-repeat center center;
-    background-size: cover;
-    animation-name: picture-zoom;
-    animation-duration: 5s;
-    animation-fill-mode: forwards;
-    overflow: hidden;
-    position: relative;
-    z-index: -100;
+.menuitem span {
+    display: block;
+    width: 100%;
+    padding-top: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 300;
+    letter-spacing: 2px;
 }
 
-#middle-main-box{
-    background-color: blueviolet;
-    width: 500px;
-    height: 100px;
-    position: absolute;
-    top: 30px;
-    right: 60px;
-    opacity: 70%;
-    border-radius: 5px;
 
-    animation-name: slide-from-left;
-    animation-duration: 2s;
-    animation-fill-mode: forwards;
+/*--------------------------------------------Hover.css*/
+
+.hvr-sweep-to-bottom:before {
+    background: rgba(0, 0, 0, 0.2);
+    height: 120px;
 }
 
-#middle-main-box-lower {
-    background-color: blueviolet;
+
+/*--------------------------------------------Footer*/
+
+footer {
+    background-color: #525252;
+    color: #fafafa;
+    min-height: 120px;
+    margin: 0;
+}
+
+footer .cv-pdf i {
+    color: #fafafa;
+    text-align: center;
+    font-size: 18px;
+    padding-left: 5px;
+}
+
+footer .cv-pdf i:hover {
+    color: #e84610;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+
+.social-links {
+    padding-bottom: 15px;
+}
+
+.social-links li a i {
+    width: 32px;
+    height: 32px;
+    padding: 12px 0;
+    border-radius: 50%;
+    font-size: 13px;
+    line-height: 7px;
+    text-align: center;
+    color: #fafafa;
+    background: #8f8f8f;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+
+.social-links li a i:hover {
+    background: #e84610;
+}
+
+#footer-details {
+    margin: 20px;
+}
+
+/*--------------------------------------------Three Reasons*/
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #e67e22;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
+}
+
+/*--------------------------------------------Personal Info*/
+
+.personal-info-item {
+    margin-bottom: 20px;
+    display: block;
+    clear: both;
+}
+
+.personal-info-item .key,
+.personal-info-item .value {
+    padding-right: 8px;
+}
+
+.personal-info-item .key p,
+.personal-info-item .value p {
+    margin: 0;
+}
+
+.personal-info-item .key {
+    display: inline-block;
     width: 30%;
-    height: 100px;
+    margin-right: 21px;
+    padding-top: 2px;
+    vertical-align: top;
+}
+
+.personal-info-item .key p {
+    font-weight: 700;
+}
+
+.personal-info-item .value {
+    display: inline-block;
+    position: relative;
+    width: 60%;
+}
+
+/*--------------------------------------------Skills*/
+
+.progress {
+    position: relative;
+    height: 25px;
+}
+
+.progress-type {
     position: absolute;
-    bottom: 30px;
-    right: 60px;
-    opacity: 70%;
-    border-radius: 5px;
-
-    animation-name: opacity-apear;
-    animation-duration: 2s;
-    animation-fill-mode: forwards;
-
-}
-
-/* animations */
-@keyframes slide-continuous {
-    from {opacity: 0%;}
-    to {opacity: 100%}
-}
-
-@keyframes slide-from-left {
-    from{ left: -200%}
-    to{ left: 30px}
-}
-
-@keyframes opacity-apear {
-    from{ opacity: 0%;
-            right: -100%;
-    }
-    to{ opacity: 70%;
-        right: 0;
-    }
-}
-@keyframes picture-zoom {
-    from{
-        transform: scale(1);
-    }
-    to{
-        transform: scale(1.1); 
-    }
+    left: 0px;
+    font-weight: 400;
+    padding: 3px 30px 2px 10px;
+    color: #fafafa;
+    background-color: rgba(25, 25, 25, 0.2);
 }
 
 
-/* screen adaptation */
+.progress-section {
+    margin: 40px 20px;
+}
 
-@media screen and (max-width: 950px) {
-    #left-main, #right-main, #middle-main{
+
+/*--------------------------------------------Work History*/
+
+.timeline-item {
+    padding: 4em 2em 0em 2em;
+    position: relative;
+    color: #fafafa;
+    border-left: 1px solid;
+}
+
+.timeline-item p {
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item::before {
+    content: attr(data-dates);
+    position: absolute;
+    left: 2.5em;
+    top: 3em;
+    display: block;
+    font-family: "Exo", sans-serif;
+    font-weight: 500;
+    font-size: .8em;
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item::after {
+    width: 12px;
+    height: 12px;
+    display: block;
+    top: 2.4em;
+    position: absolute;
+    left: -6px;
+    border-radius: 12px;
+    content: '';
+    background: #fafafa;
+}
+
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
+}
+
+.history-items {
+    margin-bottom: 30px;
+}
+
+/*--------------------------------------------Contact*/
+
+.contact-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+
+
+.center-form {
+    padding-top: 10px;
+    margin: 0 auto;
+    max-width: 70%;
+}
+
+button[type="submit"] {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    background-color: #e84610;
+    color: #fafafa;
+}
+
+/*--------------------------------------------Map*/
+div#map {
+    min-height: 360px;
+}
+
+/*--------------------------------------------Media Queries*/
+
+@media(min-width: 992px) {
+    .section-column {
+        padding: 0 30px 30px;
         float: none;
-        height: 300px;
-        text-align: center;
-        width: auto;   
-     }
-     #middle-section{
-         margin-top: 0;
-     }
-     .persons-container{
-         margin-top: 0;
-         width: 100%;
-     }
-     #logo-upper-left{
-         width: 100%;
-     }
-     nav{
-         width: 100%;
-     }
+        display: table-cell;
+    }
+
+    .center-form {
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0 auto;
+        max-width: 50%;
+    }
 }
